--- a/Src/Mojio/Mojio.csproj
+++ b/Src/Mojio/Mojio.csproj
@@ -59,33 +59,33 @@
     <Compile Include="Entity.cs" />
     <Compile Include="EntityType.cs" />
     <Compile Include="EventBroadcast.cs" />
-    <Compile Include="Events\AccelerationEvent.cs" />
     <Compile Include="Events\Accelerometer.cs" />
     <Compile Include="Events\AccelerometerEvent.cs" />
     <Compile Include="Events\ActionType.cs" />
+    <Compile Include="Events\BatteryChargingEvent.cs" />
     <Compile Include="Events\BatteryEvent.cs" />
-    <Compile Include="Events\ConnectionLost.cs" />
-    <Compile Include="Events\DecelerationEvent.cs" />
-    <Compile Include="Events\DeviceDiagnosticEvent.cs" />
+    <Compile Include="Events\BrakeAssistantEvent.cs" />
     <Compile Include="Events\DiagnosticEvent.cs" />
+    <Compile Include="Events\ExperienceControlEvent.cs" />
     <Compile Include="Events\Event.cs" />
     <Compile Include="Events\EventType.cs" />
     <Compile Include="Events\FenceEvent.cs" />
     <Compile Include="Events\FuelEvent.cs" />
-    <Compile Include="Events\HardEvent.cs" />
     <Compile Include="Events\HeadingChangeEvent.cs" />
     <Compile Include="Events\HeartBeatEvent.cs" />
     <Compile Include="Events\IdleEvent.cs" />
     <Compile Include="Events\IgnitionEvent.cs" />
+    <Compile Include="Events\LaneDepartureEvent.cs" />
     <Compile Include="Events\MileageEvent.cs" />
-    <Compile Include="Events\MovementEvent.cs" />
-    <Compile Include="Events\ParkEvent.cs" />
-    <Compile Include="Events\PowerEvent.cs" />
+    <Compile Include="Events\NavigationEvent.cs" />
+    <Compile Include="Events\ParkingDistanceControlEvent.cs" />
+    <Compile Include="Events\PedestrianAssistantEvent.cs" />
     <Compile Include="Events\RPMEvent.cs" />
-    <Compile Include="Events\SleepEvent.cs" />
     <Compile Include="Events\SpeedEvent.cs" />
+    <Compile Include="Events\TemperatureEvent.cs" />
     <Compile Include="Events\TowEvent.cs" />
     <Compile Include="Events\TripEvent.cs" />
+    <Compile Include="Events\TurnSignalEvent.cs" />
     <Compile Include="Headers.cs" />
     <Compile Include="IClient.cs" />
     <Compile Include="ICLone.cs" />
