--- a/Src/Mojio.Client/Mojio.Client.nuspec
+++ b/Src/Mojio.Client/Mojio.Client.nuspec
@@ -1,16 +1,16 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>$id$</id>
-    <version>1.7.1.2</version>
+    <id>BMW.Client</id>
+    <version>1.7.1.3</version>
     <authors>Mojio</authors>
     <owners>Mojio</owners>
-    <projectUrl>https://github.com/mojio/Mojio.Client</projectUrl>
+    <projectUrl>https://github.com/i3-hackathon/CSharp-SDK.git</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Mojio C# SDK</description>
+    <description>BMW C# SDK for the BMW i3 hackathon</description>
     <releaseNotes>Initial NuGet release.</releaseNotes>
-    <copyright>Copyright 2014</copyright>
-    <tags>Mojio API RestSharp</tags>
+    <copyright>Copyright 2015</copyright>
+    <tags>BMW Mojio API RestSharp</tags>
     <dependencies>
       <dependency id="Microsoft.Net.Http" version="2.2.28" />
       <dependency id="Newtonsoft.Json" version="6.0.5" />
